# XMem2

./: pyproject.toml  setup.py
xmem2/dataset/: static_dataset.py  vos_dataset.py
xmem2/inference/: inference_core.py  memory_manager.py  run_experiments.py  run_on_video.py
xmem2/inference/data/: mask_mapper.py  test_datasets.py  video_reader.py
xmem2/inference/frame_selection/: frame_selection.py  frame_selection_utils.py
xmem2/inference/interact/: gui.py  interactive_utils.py  resource_manager.py  s2m_controller.py
xmem2/model/: modules.py  network.py  trainer.py
xmem2/util/: image_saver.py
